examples/distributed-zenoh/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lokesh-ros2-distributed-demo
  labels:
    app.kubernetes.io/name: ros2-gazebo-demo
