examples/distributed-zenoh/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ros2-distributed-novnc
  namespace: lokesh-ros2-demo
  labels:
    app: gazebo-sim
    app.kubernetes.io/part-of: ros2-distributed
  annotations:
    haproxy.router.openshift.io/timeout: 10m
spec:
  to:
    kind: Service
    name: gazebo-sim-novnc
    weight: 100
  port:
    targetPort: novnc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ros2-distributed-web
  namespace: lokesh-ros2-demo
  labels:
    app: gazebo-sim
    app.kubernetes.io/part-of: ros2-distributed
spec:
  to:
    kind: Service
    name: gazebo-sim-web
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
